# AnyAlert

./: .gitignore  docker-compose.yml  test_allo.py  test_comfy.py  test_foxtrot.py  test_olx.py  test_prom.py  test_rozetka.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  check_tables.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202505090001_add_telegram_to_users.py  202604260001_create_users_table.py  202605020001_add_tracker_metrics_and_triggers.py  202605090001_add_extended_fields_to_rozetka.py  48471a851d9c_add_title_to_product_tracker.py  add_tracker_triggers_table.py  add_trigger_snapshot_fields.py  c3728864c176_add_product_tracker.py  normalize_platform_data.py  remove_trigger_columns.py
backend/app/: dependencies.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  telegram.py  trackers.py  users.py  webhooks.py
backend/app/bot/: application.py  handlers.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  platform_data.py  tracker.py  user.py
backend/app/repositories/: user_repository.py
backend/app/schemas/: auth.py  tracker.py  user.py
backend/app/services/: auth_service.py  email_service.py  telegram_service.py  user_service.py
backend/tests/: test_health.py
frontend/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
parser/: Dockerfile  celerybeat-schedule.db  pyproject.toml
parser/app/: config.py  worker.py
parser/app/tasks/: allo.py  comfy.py  foxtrot.py  olx.py  prom.py  retail.py  retail_common.py  rozetka.py
(+29 files in other folders)
