[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anyalert-parser"
version = "0.1.0"
description = "Background Parser Service for AnyAlert"
requires-python = ">=3.10"
dependencies = [
  "celery>=5.4.0",
  "redis>=5.0.8",
  "httpx>=0.27.0",
  "playwright>=1.42.0",
  "playwright-stealth>=1.0.6",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.1"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.setuptools.packages.find]
include = ["app*"]
